--- a/index.html
+++ b/index.html
@@ -9,68 +9,78 @@
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
-        <div class="title">
-            <p>26 Margot Street, Epsom, Auckland, 1051</p>
-            <h2>Henry Enrico Turner</h2>
+    <div>
+        <div class="nav">
+            <ul>
+                <li><span>Owner:</span> Jen Turner</li>
+                <li><span>Mobile:</span> 02111234567</li>
+                <li><span>Email:</span> jen@turner.com</li>
+            </ul>
         </div>
-        <div class="profile">
-            <div class="profile-image">
-                <img src="./resources/images/henry-and-ry.jpg" alt="Photo of Ryan Castle and his dog Henry.">
+    </div>
+        <div class="main">
+            <div class="title">
+                <h2>Henry Enrico Turner</h2>
             </div>
-            <div class="profile-info">
-                <ul>
-                    <li><span>Age</span> 3 Years Old</li>
-                    <li><span>Breed</span> Rhodesian Ridgeback Cross</li>
-                    <li><span>Sex</span> male</li>
-                    <li><span>Weight/size</span> 27kg medium size</li>
-                    <li><span>Neuter status</span> neutered</li>
-                    <li><span>Vaccinations</span> up to date</li>
-                    <li><span>Training</span> puppy school graduate</li>
-                </ul>
+            <div class="profile">
+                <div class="profile-image">
+                    <img src="./resources/images/henry-and-ry.jpg" alt="Photo of Ryan Castle and his dog Henry.">
+                </div>
+                <div class="profile-info">
+                    <ul>
+                        <li><span>Age</span> 3 Years Old</li>
+                        <li><span>Breed</span> Rhodesian Ridgeback X</li>
+                        <li><span>Sex</span> male</li>
+                        <li><span>Weight/size</span> 27kg medium size</li>
+                        <li><span>Neuter status</span> neutered</li>
+                        <li><span>Vaccinations</span> up to date</li>
+                        <li><span>Training</span> puppy school graduate</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info">
+                <h1 class="tagline"> I know I'm a mix but I'm all the best bits</h1>
+                <div class="section">
+                    <h3>About my breed</h3>
+                    <ul>
+                        <li>I am a Rhodesian Ridgeback, Shar-pei, and Staffy Cross</li>
+                        <li>I get my golden glow and floppy ears from the Rhodesian Ridgeback. I have the wrinkles of a Shar-Pei, the smokey eyes of a Staffy, and the cuddling needs of a human.</li>
+                        <li>I need daily exercise but I love a good sleep in too.</li>
+                        <li>I am an affectionate and loving mix, so I love a good snuggle!</li>
+                        <li>I am a devoted, loyal and affectionate companion. Protective of my owners and property, but I don’t bark unless there is something I’m concerned about or feel threatened by. Mum is working with me to desensitize bikes, scooters, and cats.</li>
+                        <li>I’m a very intelligent pupper, I want to impress, I respond well to training, and can learn new games and tricks fast!</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>Things I like</h3>
+                    <ul>
+                        <li>Falling asleep in the sun</li>
+                        <li>Chasing sticks or a ball</li> 
+                        <li>Playing games with Mum and Dad</li>    
+                        <li>Exploring and going on long walks</li>
+                        <li>Swimming in the ocean</li> 
+                        <li>Lying in weird positions</li>
+                        <li>Baths with duckduck</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3>Adoption</h3>
+                    <p>Saving Hope Foundation — June 2018 <br><span>Registered Charitable Trust #2678031</span></p>
+                </div>
+                <div class="section">
+                    <h3>Education</h3>
+                    <ul>
+                        <li>Dogguru Orewa Beginners Course — Graduate</li>
+                        <li>4Dogsake Doggy Daycare, Silverdale (23 Sept 2018 - 21 Oct 2018)</li>
+                    </ul>
+                    <p class="quote">"I enjoyed school with the other puppys and learnt very fast! The trainer said I was eager to learn and impress. I am looking forward to starting secondary schooling over summer."</p>
+                </div>
+                <div class="section">
+                    <h3>Health and Grooming</h3>
+                    <p class="quote">"My mum keeps me really well groomed with regular pedicures, baths once a month, and if I have been for a muddy walk I get an outside bath. Every month I am given a flea treatment and twice a year a worming tablet, I’m very good at taking medicine. I have been to the vet a few times and behaved really well."</p>
+                </div>
             </div>
         </div>
-        <div class="info">
-            <h1 class="tagline"> I know I'm a mix but I'm all the best bits</h1>
-            <div class="section">
-                <h3>About my breed — rhodesian ridgeback x, Shar-pei, staffy x</h3>
-                <ul>
-                    <li>I get my golden glow and floppy ears from the Rhodesian Ridgeback. I have the wrinkles of a Shar-Pei, the smokey eyes of a Staffy, and the cuddling needs of a human.</li>
-                    <li>I need daily exercise but I love a good sleep in too.</li>
-                    <li>I am an affectionate and loving mix, so I love a good snuggle!</li>
-                    <li>I am a devoted, loyal and affectionate companion. Protective of my owners and property, but I don’t bark unless there is something I’m concerned about or feel threatened by. Mum is working with me to desensitize bikes, scooters, and cats.</li>
-                    <li>I’m a very intelligent pupper, I want to impress, I respond well to training, and can learn new games and tricks fast!</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h3>Things I like</h3>
-                <ul>
-                    <li>Falling asleep in the sun</li>
-                    <li>Chasing sticks or a ball</li> 
-                    <li>Playing games with Mum and Dad</li>    
-                    <li>Exploring and going on long walks</li>
-                    <li>Swimming in the ocean</li> 
-                    <li>Lying in weird positions</li>
-                    <li>Baths with duckduck</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h3>Adoption</h3>
-                <p>Saving Hope Foundation — June 2018 <br><span>Registered Charitable Trust #2678031</span></p>
-            </div>
-            <div class="section">
-                <h3>Education</h3>
-                <ul>
-                    <li>Dogguru Orewa Beginners Course — Graduate</li>
-                    <li>4Dogsake Doggy Daycare, Silverdale (23 Sept 2018 - 21 Oct 2018)</li>
-                </ul>
-                <p class="quote">"I enjoyed school with the other puppys and learnt very fast! The trainer said I was eager to learn and impress. I am looking forward to starting secondary schooling over summer."</p>
-            </div>
-            <div class="section">
-                <h3>Health and Grooming</h3>
-                <p class="quote">"My mum keeps me really well groomed with regular pedicures, baths once a month, and if I have been for a muddy walk I get an outside bath. Every month I am given a flea treatment and twice a year a worming tablet, I’m very good at taking medicine. I have been to the vet a few times and behaved really well."</p>
-            </div>
-        </div>
-        <footer></footer>
+    </div>
 </body>
 </html>
