--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="nav">
             <ul>
                 <li><span>Owner:</span> Jen Turner</li>
-                <li><span>Mobile:</span> 02111234567</li>
-                <li><span>Email:</span> jen@turner.com</li>
+                <li><span>Mobile:</span> 0278997109</li>
+                <li><span>Email:</span> jenturnernz@gmail.com</li>
             </ul>
         </div>
     </div>
